// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page basic 1`] = `
<div>
  <div
    class="mt--16 mx--16 mb-16 bgWhite"
    sx="[object Object]"
  >
    <div
      class="ant-breadcrumb"
    />
  </div>
  <div
    class="p-16 bg-white"
  />
</div>
`;

exports[`Page breadcrumb ignore empty path name 1`] = `
<div>
  <div
    class="mt--16 mx--16 mb-16 bgWhite"
    sx="[object Object]"
  >
    <div
      class="ant-breadcrumb"
    >
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          Child Page
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
  </div>
  <div
    class="p-16 bg-white"
  />
</div>
`;

exports[`Page page with css props 1`] = `
<div>
  <div
    class="mt--16 mx--16 mb-16 bgWhite"
    sx="[object Object]"
  >
    <div
      class="ant-breadcrumb"
    />
  </div>
  <div
    class="p-16 bg-white mb-2"
  />
</div>
`;
